crates/tmark-writers/tests/snapshots/fixtures__container-figure@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{figure}[H]
\centering
\begin{subfigure}{0.48\linewidth}
\centering
\includegraphics[width=\linewidth]{boot.png}
\caption{Boot}\label{fig:boot}
\end{subfigure}
\hfill
\begin{subfigure}{0.48\linewidth}
\centering
\includegraphics[width=\linewidth]{crash.png}
\caption{Crash}\label{fig:crash}
\end{subfigure}
\caption{Watchdog traces before and after the fix.}\label{fig:traces}
\end{figure}

---requires---
{
  "packages": [
    "float",
    "graphicx",
    "subcaption"
  ],
  "fragments": [],
  "shell_escape": false,
  "assets": [
    {
      "src": "boot.png",
      "node": 3
    },
    {
      "src": "crash.png",
      "node": 7
    }
  ],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
