crates/tmark-writers/tests/snapshots/fixtures__container-figure@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#counter(figure.where(kind: "ts-subfigure")).update(0)
#figure(
  grid(columns: 2, gutter: 1em,
    [#ts-subfigure(image("boot.png"), caption: [Boot]) <fig:boot>],
    [#ts-subfigure(image("crash.png"), caption: [Crash]) <fig:crash>],
  ),
  caption: [Watchdog traces before and after the fix.],
) <fig:traces>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [
    {
      "src": "boot.png",
      "node": 3
    },
    {
      "src": "crash.png",
      "node": 7
    }
  ],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
